--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -7,7 +7,7 @@ html(lang="en")
     meta(name="viewport" content="width=device-width, initial-scale=1")
 
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
-    link(rel="stylesheet", href="/static/css/onestopsource.css")
+    link(rel="stylesheet", href="/static/css/pycon.cz.css")
 
     if !debug
       script.
