--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -7,7 +7,7 @@ html(lang="en")
     meta(name="viewport" content="width=device-width, initial-scale=1")
 
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
-    link(rel="stylesheet", href="/static/css/pycon.cz.css")
+    link(rel="stylesheet", href="/static/css/pyconcz.css")
 
     if !debug
       script.
@@ -21,5 +21,21 @@ html(lang="en")
 
   body
     a(name="top")
+
+    .jumbotron
+      .container
+        h1 PyCon CZ 2015
+        p.lead.
+          The very first PyCon in Czech republic. Join us for one day of talks
+          about Python or Python related topics.
+
+        .row
+          .col-md-3.col-md-offset-3
+            p.event-location Brno, Czech Republic
+          .col-md-3
+            p.event-date 20.-21. November 2015
+
+    .container
+      p.lead More info comming soon, ETA end of June 2015
 
    //script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
