--- a/static/scss/_bootstrap.scss
+++ b/static/scss/_bootstrap.scss
@@ -13,16 +13,16 @@
 //@import "bootstrap/code";
 @import "bootstrap/grid";
 //@import "bootstrap/tables";
-@import "bootstrap/forms";
-@import "bootstrap/buttons";
+//@import "bootstrap/forms";
+//@import "bootstrap/buttons";
 
 // Components
-@import "bootstrap/component-animations";
+//@import "bootstrap/component-animations";
 //@import "bootstrap/dropdowns";
 //@import "bootstrap/button-groups";
 //@import "bootstrap/input-groups";
-@import "bootstrap/navs";
-@import "bootstrap/navbar";
+//@import "bootstrap/navs";
+//@import "bootstrap/navbar";
 //@import "bootstrap/breadcrumbs";
 //@import "bootstrap/pagination";
 //@import "bootstrap/pager";
@@ -41,10 +41,10 @@
 
 // Components w/ JavaScript
 //@import "bootstrap/modals";
-@import "bootstrap/tooltip";
+//@import "bootstrap/tooltip";
 //@import "bootstrap/popovers";
 //@import "bootstrap/carousel";
 
 // Utility classes
-@import "bootstrap/utilities";
-@import "bootstrap/responsive-utilities";
+//@import "bootstrap/utilities";
+//@import "bootstrap/responsive-utilities";
