--- a/website/pycon/templates/_footer.html
+++ b/website/pycon/templates/_footer.html
@@ -1,3 +1,12 @@
 {% load i18n %}
 
-{% trans "&copy; 2015 &lt;your company here&gt;" %}
+<footer>
+  <a href="https://github.com/tricoder42/cz.pycon.org-2015/blob/feature/code-of-conduct/code-of-conduct.md">Code
+    of conduct
+  </a>
+
+  <p class="psf-trademark"><a href="https://www.python.org/psf/trademarks/pycon/">PyCon™</a>
+    is a trademark for worldwide conference activities claimed by
+    <a href="https://www.python.org/psf-landing/">Python software foundation</a>.
+  </p>
+</footer>
