--- a/website/pycon/templates/site_base.html
+++ b/website/pycon/templates/site_base.html
@@ -6,23 +6,46 @@
 
 
 {% block style_base %}
-    <link href="{% static "pinax/css/theme.css" %}" rel="stylesheet">
-    <link href="{% static "css/site.css" %}" rel="stylesheet">
-    {% block extra_style %}{% endblock %}
+  <link href="{% static "pinax/css/theme.css" %}" rel="stylesheet">
+  <link href="{% static "css/site.css" %}" rel="stylesheet">
+  {% block extra_style %}{% endblock %}
 {% endblock %}
 
 
 {% block extra_head_base %}
-    {% block extra_head %}{% endblock %}
+  {% block extra_head %}{% endblock %}
 {% endblock %}
 
 
 {% block footer %}
-    {% include "_footer.html" %}
+  {% include "_footer.html" %}
 {% endblock %}
 
 
 {% block extra_body_base %}
-    {% analytics %}
-    {% block extra_body %}{% endblock %}
+  <script>(function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r;
+    i[r] = i[r] || function () {
+          (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+    a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+  ga('create', 'UA-62652331-2', 'auto');
+  ga('send', 'pageview');
+  </script>
+  {% block extra_body %}{% endblock %}
+{% endblock %}
+
+
+{% block head_title_base %}
+  PyConf CZ 2015
+{% endblock %}
+
+{% block site_brand %}
+  <a class="navbar-brand" href="{% url "home" %}">PyConf CZ 2015</a>
 {% endblock %}
