Added base for static files.

--- a/website/pycon/templates/site_base.html
+++ b/website/pycon/templates/site_base.html
@@ -7,7 +7,7 @@
 
 {% block style_base %}
   <link href="{% static "pinax/css/theme.css" %}" rel="stylesheet">
-  <link href="{% static "css/site.css" %}" rel="stylesheet">
+  <link href="{% static "css/pyconcz.css" %}" rel="stylesheet">
   {% block extra_style %}{% endblock %}
 {% endblock %}
 
