--- a/website/static/scss/_bootstrap.scss
+++ b/website/static/scss/_bootstrap.scss
@@ -13,16 +13,16 @@
 //@import "bootstrap/code";
 @import "bootstrap/grid";
 //@import "bootstrap/tables";
-//@import "bootstrap/forms";
-//@import "bootstrap/buttons";
+@import "bootstrap/forms";
+@import "bootstrap/buttons";
 
 // Components
 //@import "bootstrap/component-animations";
-//@import "bootstrap/dropdowns";
+@import "bootstrap/dropdowns";
 //@import "bootstrap/button-groups";
-//@import "bootstrap/input-groups";
-//@import "bootstrap/navs";
-//@import "bootstrap/navbar";
+@import "bootstrap/input-groups";
+@import "bootstrap/navs";
+@import "bootstrap/navbar";
 //@import "bootstrap/breadcrumbs";
 //@import "bootstrap/pagination";
 //@import "bootstrap/pager";
@@ -33,8 +33,8 @@
 //@import "bootstrap/alerts";
 //@import "bootstrap/progress-bars";
 //@import "bootstrap/media";
-//@import "bootstrap/list-group";
-//@import "bootstrap/panels";
+@import "bootstrap/list-group";
+@import "bootstrap/panels";
 //@import "bootstrap/responsive-embed";
 //@import "bootstrap/wells";
 //@import "bootstrap/close";
@@ -46,5 +46,5 @@
 //@import "bootstrap/carousel";
 
 // Utility classes
-//@import "bootstrap/utilities";
-//@import "bootstrap/responsive-utilities";
+@import "bootstrap/utilities";
+@import "bootstrap/responsive-utilities";
