--- a/website/static/scss/pyconcz.scss
+++ b/website/static/scss/pyconcz.scss
@@ -6,6 +6,15 @@ body {
   text-align: center;
 }
 
+body.account-settings .account-settings,
+body.account-password .account-password,
+body.account-delete .account-delete {
+    z-index: 2; // Place active items above their siblings for proper border styling
+    color: $list-group-active-color;
+    background-color: $list-group-active-bg;
+    border-color: $list-group-active-border;
+}
+
 @for $i from 1 through 3 {
   .tri#{$i} {
     //color: nth($tricolor, $i);
