--- a/website/pycon/templates/site_base.html
+++ b/website/pycon/templates/site_base.html
@@ -23,6 +23,10 @@
 
 
 {% block extra_body_base %}
+
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.12/gmaps.js"></script>
   <script>(function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r;
     i[r] = i[r] || function () {
@@ -37,6 +41,27 @@
 
   ga('create', 'UA-62652331-2', 'auto');
   ga('send', 'pageview');
+  </script>
+  <script>
+    var lng = 16.596936;
+    var lat = 49.226245;
+
+    var map = new GMaps({
+      div: '#map',
+      zoom: 17,
+      lat: lat,
+      lng: lng,
+      scrollwheel: false
+    });
+
+    map.addMarker({
+      lat: lat,
+      lng: lng,
+      title: 'PyCon CZ 2015',
+      click: function (e) {
+        alert('You clicked in this marker');
+      }
+    });
   </script>
   {% block extra_body %}{% endblock %}
 {% endblock %}
