--- a/website/static/scss/_variables.scss
+++ b/website/static/scss/_variables.scss
@@ -9,3 +9,7 @@ $jumbotron-color: #fff;
 $claim-bg: #5ba4c0;
 
 $tricolor: #fff #A72624 #5ba4c0;
+
+//map
+$map-height: 400px;
+$text-shadow-color: #ccc;
