Added sponsors section.

--- a/website/pycon/templates/homepage.html
+++ b/website/pycon/templates/homepage.html
@@ -24,6 +24,73 @@
       Join us for one day of talks about Python and Python related topics.
     </p></div>
   </div>
+
+  <section class="sponsors">
+    <h2>Our sponsors</h2>
+    <div class="container">
+      <div class="gold">
+        <div class="sponsor-placeholder">
+          <div class="sponsor">
+            <a href="mailto:tomas.ehrlich@gmail.com" class="sponsor-link cfs">
+              Become our the most exclusive Gold sponsor!
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="silver">
+        <div class="sponsor-placeholder">
+          <div class="sponsor">
+            <a href="mailto:tomas.ehrlich@gmail.com" class="sponsor-link cfs">
+              Show yourself as a Silver sponsor!
+            </a>
+          </div>
+        </div>
+        <div class="sponsor-placeholder">
+          <div class="sponsor">
+            <a href="" class="sponsor-link"></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="bronze">
+        <div class="sponsor-placeholder">
+          <div class="sponsor">
+            <a href="mailto:tomas.ehrlich@gmail.com" class="sponsor-link cfs">
+              Support us as a Bronze sponsor!
+            </a>
+          </div>
+        </div>
+        <div class="sponsor-placeholder">
+          <div class="sponsor">
+            <a href="" class="sponsor-link"></a>
+          </div>
+        </div>
+        <div class="sponsor-placeholder">
+          <div class="sponsor">
+            <a href="" class="sponsor-link"></a>
+          </div>
+        </div>
+        <div class="sponsor-placeholder">
+          <div class="sponsor">
+            <a href="" class="sponsor-link"></a>
+          </div>
+        </div>
+        <div class="sponsor-placeholder">
+          <div class="sponsor">
+            <a href="" class="sponsor-link"></a>
+          </div>
+        </div>
+        <div class="sponsor-placeholder">
+          <div class="sponsor">
+            <a href="" class="sponsor-link"></a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
   <div class="soon">
     <div class="container"><p class="lead">More info coming soon, ETA end of June 2015</p></div>
   </div>
