--- a/website/static/scss/_bootstrap.scss
+++ b/website/static/scss/_bootstrap.scss
@@ -30,14 +30,14 @@
 //@import "bootstrap/badges";
 @import "bootstrap/jumbotron";
 //@import "bootstrap/thumbnails";
-//@import "bootstrap/alerts";
+@import "bootstrap/alerts";
 //@import "bootstrap/progress-bars";
 //@import "bootstrap/media";
 @import "bootstrap/list-group";
 @import "bootstrap/panels";
 //@import "bootstrap/responsive-embed";
 //@import "bootstrap/wells";
-//@import "bootstrap/close";
+@import "bootstrap/close";
 
 // Components w/ JavaScript
 //@import "bootstrap/modals";
