--- a/website/pycon/templates/homepage.html
+++ b/website/pycon/templates/homepage.html
@@ -27,11 +27,12 @@
 
   <section class="sponsors">
     <h2>Our sponsors</h2>
+
     <div class="container">
       <div class="gold">
         <div class="sponsor-placeholder">
           <div class="sponsor">
-            <a href="mailto:tomas.ehrlich@gmail.com" class="sponsor-link cfs">
+            <a href="mailto:tomas.ehrlich@gmail.com" class="s-link cfs">
               Become our the most exclusive Gold sponsor!
             </a>
           </div>
@@ -41,14 +42,14 @@
       <div class="silver">
         <div class="sponsor-placeholder">
           <div class="sponsor">
-            <a href="mailto:tomas.ehrlich@gmail.com" class="sponsor-link cfs">
+            <a href="mailto:tomas.ehrlich@gmail.com" class="s-link cfs">
               Show yourself as a Silver sponsor!
             </a>
           </div>
         </div>
         <div class="sponsor-placeholder">
           <div class="sponsor">
-            <a href="" class="sponsor-link"></a>
+            <a href="" class="s-link"></a>
           </div>
         </div>
       </div>
@@ -56,34 +57,34 @@
       <div class="bronze">
         <div class="sponsor-placeholder">
           <div class="sponsor">
-            <a href="mailto:tomas.ehrlich@gmail.com" class="sponsor-link cfs">
+            <a href="mailto:tomas.ehrlich@gmail.com" class="s-link cfs">
               Support us as a Bronze sponsor!
             </a>
           </div>
         </div>
         <div class="sponsor-placeholder">
           <div class="sponsor">
-            <a href="" class="sponsor-link"></a>
+            <a href="" class="s-link"></a>
           </div>
         </div>
         <div class="sponsor-placeholder">
           <div class="sponsor">
-            <a href="" class="sponsor-link"></a>
+            <a href="" class="s-link"></a>
           </div>
         </div>
         <div class="sponsor-placeholder">
           <div class="sponsor">
-            <a href="" class="sponsor-link"></a>
+            <a href="" class="s-link"></a>
           </div>
         </div>
         <div class="sponsor-placeholder">
           <div class="sponsor">
-            <a href="" class="sponsor-link"></a>
+            <a href="" class="s-link"></a>
           </div>
         </div>
         <div class="sponsor-placeholder">
           <div class="sponsor">
-            <a href="" class="sponsor-link"></a>
+            <a href="" class="s-link"></a>
           </div>
         </div>
       </div>
@@ -95,14 +96,50 @@
     <div class="container"><p class="lead">More info coming soon, ETA end of June 2015</p></div>
   </div>
 
+  <section class="speakers" id="section-speakers">
+    <h2 class="text-center">Speakers</h2>
+
+    <div class="row">
+      <div class="col-md-4">
+        <img src="https://pbs.twimg.com/profile_images/598803746722816000/htcvwi8Z.jpg" alt="">
+
+        <p class="name">Mikey Ariel</p>
+
+        <p class="description">Tech writer @ #RedHat. #writethedocs documentarian</p>
+      </div>
+      <div class="col-md-4">
+        <img src="https://pbs.twimg.com/profile_images/58051305/rusty-mugshot.png" alt="">
+
+        <p class="name">Russell Keith-Magee</p>
+
+        <p class="description">Django Core Developer</p>
+      </div>
+      <div class="col-md-4">
+        <img src="http://www.waterfordwine.com/wordpress/wp-content/uploads/2012/01/uncle-sam-wants-you.jpg" alt="">
+
+        <p class="name">Your name</p>
+
+        <p class="description">
+          <a href="mailto:tomas.ehrlich@gmail.com">
+            Write us!
+          </a>
+        </p>
+      </div>
+    </div>
+  </section>
+
   <section class="map" id="section-map">
     <div id="map"></div>
 
     <address class="xs-hide">
       <p class="strong">VUT FIT</p>
+
       <p>Building D</p>
+
       <p>Božetěchova 1/2</p>
+
       <p>612 66 Brno</p>
+
       <p>Czech Republic</p>
     </address>
   </section>
