--- a/website/static/scss/pycon/_sponsors.scss
+++ b/website/static/scss/pycon/_sponsors.scss
@@ -37,7 +37,7 @@ $sponsor-margin: 10px;
   background-color: $sponsor-placeholder-bg;
 }
 
-.sponsor-link {
+.s-link {
   display: block;
   position: absolute;
   top: 50%;
