--- a/website/static/scss/pyconcz.scss
+++ b/website/static/scss/pyconcz.scss
@@ -1,5 +1,4 @@
 @import 'bootstrap';
-
 @import 'pycon/sponsors';
 
 html,
@@ -21,6 +20,12 @@ body.account-delete .account-delete {
   .tri#{$i} {
     //color: nth($tricolor, $i);
   }
+}
+
+h2 {
+  margin-bottom: 50px;
+  font-weight: 500;
+  font-size: 2.8em;
 }
 
 .jumbotron {
@@ -80,3 +85,33 @@ body.account-delete .account-delete {
     height: $map-height;
   }
 }
+
+$images-size: 150px;
+
+.speakers {
+
+  .row {
+
+    img {
+      width: $images-size;
+      height: $images-size;
+      border: 1px solid $text-shadow-color;
+      border-radius: $images-size/2;
+
+    }
+
+    .name {
+      padding: 20px 0 0;
+      font-weight: 500;
+      font-size: 1.6em;
+    }
+
+    .description {
+      width: 80%;
+      margin: 0 auto;
+      font-size: 1.2em;
+      text-align: center;
+    }
+  }
+}
+
