--- a/website/pycon/templates/site_base.html
+++ b/website/pycon/templates/site_base.html
@@ -24,9 +24,11 @@
 
 {% block extra_body_base %}
 
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.12/gmaps.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
   <script>(function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r;
     i[r] = i[r] || function () {
@@ -57,12 +59,15 @@
     map.addMarker({
       lat: lat,
       lng: lng,
-      title: 'PyCon CZ 2015',
-      click: function (e) {
-        alert('You clicked in this marker');
-      }
+      title: 'PyCon CZ 2015'
     });
   </script>
+  <script>
+    $(function () {
+      $('body').scrollspy({target: '#navbar-example'})
+    });
+  </script>
+
   {% block extra_body %}{% endblock %}
 {% endblock %}
 
