--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -1,55 +1,176 @@
-doctype
-html(lang="en")
+doctype html
+html(lang='en-us')
   head
-    title PyConf CZ 2015
-
     meta(charset='utf-8')
-    meta(name="viewport" content="width=device-width, initial-scale=1")
-
-    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
-    link(rel="stylesheet", href="/static/css/pyconcz.css")
-
-    if !debug
-      script.
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-62652331-2', 'auto');
-        ga('send', 'pageview');
-
-  body
-    a(name="top")
-
-    .jumbotron
-      .container
-        img.python-logo(src="/static/images/psf/python-notext.png")
-        h1 #[span.tri1 PyConf] #[span.tri2 C]#[span.tri3 Z] 2015
-
+    title
+      | PyConf CZ 2015
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    link(href='/static/pinax/css/theme.css', rel='stylesheet')
+    link(href='/static/css/pyconcz.css', rel='stylesheet')
+    // HTML5 shim, for IE6-8 support of HTML elements
+    //if lt IE 9
+      script(src='/static/pinax/js/html5shiv.js')
+  body.home(id='', data-spy='scroll', data-target='#navbar-example')
+    div
+      header
+        .navbar.navbar-default.navbar-fixed-top
+          .container
+            .navbar-header
+              button.navbar-toggle(data-toggle='collapse', data-target='.navbar-collapse')
+                span.fa.fa-bars
+              a.navbar-brand(href='/') PyConf CZ 2015
+            .collapse.navbar-collapse.navbar-responsive-collapse
+              ul.nav.navbar-nav.pull-right
+                p.navbar-text
+                  i.fa.fa-user
+                  |  admin
+                li
+                  a(href='/account/settings/')
+                    i.fa.fa-cog
+                    |  Settings
+                li
+                  a#account_logout(href='/account/logout/')
+                    i.fa.fa-power-off
+                    |  Log out
+              form#accountLogOutForm(style='display: none;', action='/account/logout/', method='POST')
+                input(type='hidden', name='csrfmiddlewaretoken', value='FgQXk0MxfqM1Ce6CjxDrRHakg8c74M8j')
+      #navbar-example
+        ul.nav.navbar-nav
+          li
+            a(href='#section-sponsors') section-sponsors
+          li
+            a(href='#section-speakers') speakers
+      .jumbotron(xmlns='http://www.w3.org/1999/html')
+        .container
+          img.python-logo(src='/static/images/psf/python-notext.png')
+          h1
+            span.tri1 PyCon
+            span.tri2 C
+            span.tri3 Z
+            |  2015
+          .row
+            .col-md-3.col-md-offset-3
+              p.event-location Brno, Czech Republic
+            .col-md-3
+              p.event-date 14-15. November 2015
+      .claim
+        .container
+          p.lead
+            | The very first Python conference in Czech republic.
+            | Join us for one day of talks about Python and Python related topics.
+      section#section-sponsors.sponsors
+        h2 Our sponsors
+        .container
+          .gold
+            .sponsor-placeholder
+              .sponsor
+                a.s-link.cfs(href='mailto:tomas.ehrlich@gmail.com')
+                  | Become our the most exclusive Gold sponsor!
+          .silver
+            .sponsor-placeholder
+              .sponsor
+                a.s-link.cfs(href='mailto:tomas.ehrlich@gmail.com')
+                  | Show yourself as a Silver sponsor!
+            .sponsor-placeholder
+              .sponsor
+                a.s-link(href='')
+          .bronze
+            .sponsor-placeholder
+              .sponsor
+                a.s-link.cfs(href='mailto:tomas.ehrlich@gmail.com')
+                  | Support us as a Bronze sponsor!
+            .sponsor-placeholder
+              .sponsor
+                a.s-link(href='')
+            .sponsor-placeholder
+              .sponsor
+                a.s-link(href='')
+            .sponsor-placeholder
+              .sponsor
+                a.s-link(href='')
+            .sponsor-placeholder
+              .sponsor
+                a.s-link(href='')
+            .sponsor-placeholder
+              .sponsor
+                a.s-link(href='')
+      .soon
+        .container
+          p.lead More info coming soon, ETA end of June 2015
+      section#section-speakers.speakers
+        h2.text-center Speakers
         .row
-          .col-md-3.col-md-offset-3
-            p.event-location Brno, Czech Republic
-          .col-md-3
-            p.event-date 20-21. November 2015
-
-    .claim
-      .container
-        p.lead.
-          The very first Python conference in Czech republic.
-          Join us for one day of talks about Python and Python related topics.
-
-    .soon
-      .container
-        p.lead More info coming soon, ETA end of June 2015
-
-    footer
-      a(href="https://github.com/tricoder42/cz.pycon.org-2015/blob/feature/code-of-conduct/code-of-conduct.md").
-        Code of conduct
-
-      p.psf-trademark.
-        #[a(href="https://www.python.org/psf/trademarks/pycon/") PyCon™]
-        is a trademark for worldwide conference activities claimed by
-        #[a(href="https://www.python.org/psf-landing/") Python software foundation].
-
-   //script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
+          .col-md-4
+            img(src='https://pbs.twimg.com/profile_images/598803746722816000/htcvwi8Z.jpg', alt='')
+            p.name Mikey Ariel
+            p.description Tech writer @ #RedHat. #writethedocs documentarian
+          .col-md-4
+            img(src='https://pbs.twimg.com/profile_images/58051305/rusty-mugshot.png', alt='')
+            p.name Russell Keith-Magee
+            p.description Django Core Developer
+          .col-md-4
+            img(src='http://www.waterfordwine.com/wordpress/wp-content/uploads/2012/01/uncle-sam-wants-you.jpg', alt='')
+            p.name Your name
+            p.description
+              a(href='mailto:tomas.ehrlich@gmail.com')
+                | Write us!
+      section#section-map.map
+        #map
+        address.xs-hide
+          p.strong VUT FIT
+          p Building D
+          p Božetěchova 1/2
+          p 612 66 Brno
+          p Czech Republic
+      hr
+      footer
+        .container
+          footer
+            a(href='https://github.com/tricoder42/cz.pycon.org-2015/blob/feature/code-of-conduct/code-of-conduct.md')
+              | Code
+              | of conduct
+            p.psf-trademark
+              a(href='https://www.python.org/psf/trademarks/pycon/') PyCon™
+              |     is a trademark for worldwide conference activities claimed by
+              a(href='https://www.python.org/psf-landing/') Python software foundation
+              | .
+    script(src='/static/jquery/js/jquery-2.1.4.min.js')
+    script(src='/static/js/bootstrap.min.js')
+    script(src='/static/pinax/js/theme.js')
+    script(type='text/javascript', src='http://code.jquery.com/jquery-1.9.1.min.js')
+    script(type='text/javascript', src='https://maps.googleapis.com/maps/api/js?sensor=false')
+    script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.12/gmaps.js')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
+    script.
+      (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function () {
+      (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+      })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+      ga('create', 'UA-62652331-2', 'auto');
+      ga('send', 'pageview');
+    script.
+      var lng = 16.596936;
+      var lat = 49.226245;
+      var map = new GMaps({
+      div: '#map',
+      zoom: 17,
+      lat: lat,
+      lng: lng,
+      scrollwheel: false
+      });
+      map.addMarker({
+      lat: lat,
+      lng: lng,
+      title: 'PyCon CZ 2015'
+      });
+    script.
+      $(function () {
+      $('body').scrollspy({target: '#navbar-example'})
+      });
