--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -46,12 +46,12 @@ html(lang='en-us')
         .container
           footer
             a(href='https://github.com/tricoder42/cz.pycon.org-2015/blob/feature/code-of-conduct/code-of-conduct.md')
-              | Code
-              | of conduct
+              | Code of conduct
+
             p.psf-trademark
               a(href='https://www.python.org/psf/trademarks/pycon/') PyCon™
-              |     is a trademark for worldwide conference activities claimed by
-              a(href='https://www.python.org/psf-landing/') Python software foundation
+              |  is a trademark for worldwide conference activities claimed by
+              a(href='https://www.python.org/psf-landing/')  Python software foundation
               | .
 
     script(type='text/javascript', src='http://code.jquery.com/jquery-1.9.1.min.js')
