--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -17,16 +17,12 @@ html(lang='en-us')
       .jumbotron(xmlns='http://www.w3.org/1999/html')
         .container
           img.python-logo(src='/static/images/psf/python-notext.png')
-          h1
-            span.tri1 PyCon
-            span.tri2 C
-            span.tri3 Z
-            |  2015
+          h1 PyCon CZ 2015
           .row
             .col-md-3.col-md-offset-3
               p.event-location Brno, Czech Republic
             .col-md-3
-              p.event-date 14-15. November 2015
+              p.event-date 14-15th November 2015
       .claim
         .container
           p.lead
@@ -34,9 +30,6 @@ html(lang='en-us')
             | Join us for one day of talks about Python and Python related topics.
       section#section-sponsors.sponsors
         include ./pages/sponsors
-      .soon
-        .container
-          p.lead More info coming soon, ETA end of June 2015
       section#section-speakers.speakers
         include ./pages/speakers
       section#section-map.map
