--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -26,35 +26,28 @@ html(lang='en-us')
     script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.12/gmaps.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
     script.
-      (function (i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r;
-      i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date();
-      a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0];
-      a.async = 1;
-      a.src = g;
-      m.parentNode.insertBefore(a, m)
-      })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+      (function (i, s, o, g, r, a, m) {i['GoogleAnalyticsObject'] = r;i[r] = i[r] || function () {(i[r].q = i[r].q || []).push(arguments)}, i[r].l = 1 * new Date();a = s.createElement(o),m = s.getElementsByTagName(o)[0];a.async = 1;a.src = g;m.parentNode.insertBefore(a, m)})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
       ga('create', 'UA-62652331-2', 'auto');
       ga('send', 'pageview');
     script.
-      var lng = 16.596936;
-      var lat = 49.226245;
-      var map = new GMaps({
-      div: '#map',
-      zoom: 17,
-      lat: lat,
-      lng: lng,
-      scrollwheel: false
-      });
-      map.addMarker({
-      lat: lat,
-      lng: lng,
-      title: 'PyCon CZ 2015'
-      });
-    script.
       $(function () {
-      $('body').scrollspy({target: '#navbar-example'})
+        var
+          lng = 16.596936,
+          lat = 49.226245;
+
+        var map = new GMaps({
+          div: '#map',
+          zoom: 17,
+          lat: lat,
+          lng: lng,
+          scrollwheel: false
+        });
+
+        map.addMarker({
+          lat: lat,
+          lng: lng,
+          title: 'PyCon CZ 2015'
+        });
+
+        $('body').scrollspy({target: '#navbar-example'})
       });
