--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -6,49 +6,23 @@ html(lang='en-us')
   head
     include ./components/head
   body.home(id='', data-spy='scroll', data-target='#navbar-example')
-    div
-      header
-        .navbar.navbar-default.navbar-fixed-top#navbar-example
-          ul.nav.navbar-nav
-            li
-              a(href='#section-sponsors') section-sponsors
-            li
-              a(href='#section-speakers') speakers
-      .jumbotron(xmlns='http://www.w3.org/1999/html')
-        .container
-          img.python-logo(src='/static/images/psf/python-notext.png')
-          h1 PyCon CZ 2015
-          .row
-            .col-md-3.col-md-offset-3
-              p.event-location Brno, Czech Republic
-            .col-md-3
-              p.event-date 14-15th November 2015
-      .claim
-        .container
-          p.lead
-            | The very first Python conference in Czech republic.
-            | Join us for one day of talks about Python and Python related topics.
+      include components/navbar
+
+      section#section-home.home
+        include ./pages/home
       section#section-sponsors.sponsors
         include ./pages/sponsors
       section#section-speakers.speakers
         include ./pages/speakers
       section#section-map.map
         include ./pages/map
-      hr
-      footer
-        .container
-          footer
-            a(href='https://github.com/tricoder42/cz.pycon.org-2015/blob/feature/code-of-conduct/code-of-conduct.md')
-              | Code of conduct
 
-            p.psf-trademark
-              a(href='https://www.python.org/psf/trademarks/pycon/') PyCon™
-              |  is a trademark for worldwide conference activities claimed by
-              a(href='https://www.python.org/psf-landing/')  Python software foundation
-              | .
+      include components/footer
+
+
 
     script(type='text/javascript', src='http://code.jquery.com/jquery-1.9.1.min.js')
-    script(type='text/javascript', src='https://maps.googleapis.com/maps/api/js?sensor=false')
+    script(type='text/javascript', src='https://maps.google.com/maps/api/js?sensor=true')
     script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.12/gmaps.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
     script.
