Added smooth scrolling

--- a/static/jade/pages/timeline.jade
+++ b/static/jade/pages/timeline.jade
@@ -1,7 +1,7 @@
 h2.text-center Timeline
 
 div.row
-  ul.timeline.col-md-12
+  ul.ul-timeline.col-md-12
     li
       .timeline-badge
         i.glyphicon.glyphicon-check
