--- a/static/jade/pages/map.jade
+++ b/static/jade/pages/map.jade
@@ -1,8 +1,10 @@
-#map
+h2 The venue
 
-address.xs-hide
+address
   p.strong VUT FIT
   p Building D
   p Božetěchova 1/2
   p 612 66 Brno
   p Czech Republic
+
+#map
