Added schedule to menu.

--- a/static/jade/components/navbar.jade
+++ b/static/jade/components/navbar.jade
@@ -16,4 +16,6 @@ div
           li
             a(href='#section-speakers') Speakers
           li
-            a(href='#section-map') Contact
+            a(href='#section-schedule') Schedule
+          li
+            a(href='#section-contact') Contact
