--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -14,9 +14,9 @@ html(lang='en-us')
       include ./pages/sponsors
     section#section-speakers.speakers
       include ./pages/speakers
-    section#section-timeline.timeline
+    section#section-schedule.timeline
       include ./pages/timeline
-    section#section-map.map
+    section#section-contact.map
       include ./pages/map
 
     include components/footer
