--- a/static/jade/pages/timeline.jade
+++ b/static/jade/pages/timeline.jade
@@ -1,17 +1,17 @@
 h2.text-center Timeline
 
 div.row
-  ul.ul-timeline.col-md-12
+  ul.ul-timeline.col-md-10.col-md-offset-1
     li
       .timeline-badge
         i.glyphicon.glyphicon-check
       .timeline-panel
         .timeline-heading
-          h4.timeline-title Mussum ipsum cacilds
+          h4.timeline-title Django Girl
           p
             small.text-muted
-              i.glyphicon.glyphicon-time
-              |  11 hours ago via Twitter
+              i.glyphicon.glyphicon Friday 13.11.
+
         .timeline-body
           p
             | Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.
@@ -20,7 +20,10 @@ div.row
         i.glyphicon.glyphicon-credit-card
       .timeline-panel
         .timeline-heading
-          h4.timeline-title Mussum ipsum cacilds
+          h4.timeline-title Speaks
+          p
+            small.text-muted
+              i.glyphicon.glyphicon Saturday 14.11.
         .timeline-body
           p
             | Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.
@@ -31,54 +34,10 @@ div.row
         i.glyphicon.glyphicon-credit-card
       .timeline-panel
         .timeline-heading
-          h4.timeline-title Mussum ipsum cacilds
-        .timeline-body
+          h4.timeline-title Sprints
           p
-            | Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.
-    li.timeline-inverted
-      .timeline-panel
-        .timeline-heading
-          h4.timeline-title Mussum ipsum cacilds
-        .timeline-body
-          p
-            | Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.
-    li
-      .timeline-badge.info
-        i.glyphicon.glyphicon-floppy-disk
-      .timeline-panel
-        .timeline-heading
-          h4.timeline-title Mussum ipsum cacilds
-        .timeline-body
-          p
-            | Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.
-          hr
-          .btn-group
-            button.btn.btn-primary.btn-sm.dropdown-toggle(type='button', data-toggle='dropdown')
-              i.glyphicon.glyphicon-cog
-              span.caret
-            ul.dropdown-menu(role='menu')
-              li
-                a(href='#') Action
-              li
-                a(href='#') Another action
-              li
-                a(href='#') Something else here
-              li.divider
-              li
-                a(href='#') Separated link
-    li
-      .timeline-panel
-        .timeline-heading
-          h4.timeline-title Mussum ipsum cacilds
-        .timeline-body
-          p
-            | Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.
-    li.timeline-inverted
-      .timeline-badge.success
-        i.glyphicon.glyphicon-thumbs-up
-      .timeline-panel
-        .timeline-heading
-          h4.timeline-title Mussum ipsum cacilds
+            small.text-muted
+              i.glyphicon.glyphicon Sunday 14.11.
         .timeline-body
           p
             | Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.
