--- a/static/jade/pages/timeline.jade
+++ b/static/jade/pages/timeline.jade
@@ -1,43 +1,51 @@
-h2.text-center Timeline
+h2.text-center Schedule
 
 div.row
   ul.ul-timeline.col-md-10.col-md-offset-1
     li
-      .timeline-badge
+      .timeline-badge.warning
         i.glyphicon.glyphicon-check
       .timeline-panel
         .timeline-heading
-          h4.timeline-title Django Girl
+          h4.timeline-title Django Girls
           p
             small.text-muted
-              i.glyphicon.glyphicon Friday 13.11.
+              i.glyphicon.glyphicon Friday 13th
 
         .timeline-body
-          p
-            | Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.
+          p.
+            The world famous DjangoGirls workshop is going to Brno for the
+            second time. Full day of learning, coding and fun to inspire
+            and bring more amazing women into the world of technology.
+
     li.timeline-inverted
-      .timeline-badge.warning
+      .timeline-badge.info
         i.glyphicon.glyphicon-credit-card
       .timeline-panel
         .timeline-heading
-          h4.timeline-title Speaks
+          h4.timeline-title Talks
           p
             small.text-muted
-              i.glyphicon.glyphicon Saturday 14.11.
+              i.glyphicon.glyphicon Saturday 14th
         .timeline-body
-          p
-            | Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.
-          p
-            | Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui. Nullam leo erat, aliquet quis tempus a, posuere ut mi. Ut scelerisque neque et turpis posuere pulvinar pellentesque nibh ullamcorper. Pharetra in mattis molestie, volutpat elementum justo. Aenean ut ante turpis. Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac mauris lectus, non scelerisque augue. Aenean justo massa.
+          p.
+            On Sunday expect range of talks about Python and how it's used
+            in different environments. From building beautiful django-pony
+            websites, to analyzing terabytes of data in science institutes,
+            we're going to select the most diverse talks from all possible fields.
     li
-      .timeline-badge.danger
+      .timeline-badge
         i.glyphicon.glyphicon-credit-card
       .timeline-panel
         .timeline-heading
-          h4.timeline-title Sprints
+          h4.timeline-title Sprints and workshops
           p
             small.text-muted
-              i.glyphicon.glyphicon Sunday 14.11.
+              i.glyphicon.glyphicon Sunday 14th
         .timeline-body
-          p
-            | Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.
+          p.
+            Traditional conference sprints will be held on Sunday. Do you
+            have an interesting project you would like to work with other people?
+            Tell them, inspire them and get special force of keen programmers.
+            Do you have a idea for workshop? Tell us and we'll help you to
+            organize it.
