--- a/static/jade/pages/speakers.jade
+++ b/static/jade/pages/speakers.jade
@@ -10,7 +10,8 @@ h2.text-center Speakers
     p.name Russell Keith-Magee
     p.description Django Core Developer
   .col-md-4
-    img(src='http://www.waterfordwine.com/wordpress/wp-content/uploads/2012/01/uncle-sam-wants-you.jpg', alt='')
+    //img(src='http://www.waterfordwine.com/wordpress/wp-content/uploads/2012/01/uncle-sam-wants-you.jpg', alt='')
+    .placeholder #[span ?]
     p.name Your name
     p.description
       a(href='mailto:' + contactEmail)
