Fixed scroll spy offset.

--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -4,7 +4,7 @@ doctype html
 html(lang='en-us')
   head
     include ./components/head
-  body.home(data-spy='scroll', data-target='#main-navbar')
+  body.home(data-spy='scroll', data-target='#main-navbar', data-offset="50")
     include components/navbar
 
     section#section-home.home
