--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -24,43 +24,12 @@ html(lang='en-us')
     script(type='text/javascript', src='https://maps.google.com/maps/api/js?sensor=true')
     script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.12/gmaps.js')
     script(type='text/javascript', src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
+    script(type='text/javascript', src='/static/js/main.min.js')
     script.
-      (function (i, s, o, g, r, a, m) {i['GoogleAnalyticsObject'] = r;i[r] = i[r] |function () {(i[r].q = i[r].q |[]).push(arguments)}, i[r].l = 1 * new Date();a = s.createElement(o),m = s.getElementsByTagName(o)[0];a.async = 1;a.src = g;m.parentNode.insertBefore(a, m)})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
       ga('create', 'UA-62652331-2', 'auto');
       ga('send', 'pageview');
-    script.
-      $(function () {
-        var
-          lng = 16.596936,
-          lat = 49.226245;
-
-        var map = new GMaps({
-          div: '#map',
-          zoom: 17,
-          lat: lat,
-          lng: lng,
-          scrollwheel: false
-        });
-
-        map.addMarker({
-          lat: lat,
-          lng: lng,
-          title: 'PyCon CZ 2015'
-        });
-      });
-
-    script.
-      $(function() {
-      $('a[href*=#]:not([href=#])').click(function() {
-      if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
-      var target = $(this.hash);
-      target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-      if (target.length) {
-      $('html,body').animate({
-      scrollTop: target.offset().top
-      }, 1000);
-      return false;
-      }
-      }
-      });
-      });
