--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -13,6 +13,8 @@ html(lang='en-us')
       include ./pages/speakers
     section#section-schedule.timeline
       include ./pages/timeline
+    section#section-tickets.tickets
+      include ./pages/tickets
     section#section-sponsors.sponsors
       include ./pages/sponsors
     section#section-contact.map
