--- a/static/jade/pages/speakers.jade
+++ b/static/jade/pages/speakers.jade
@@ -14,5 +14,6 @@ h2.text-center Speakers
     .placeholder #[span ?]
     p.name Your name
     p.description
-      a(href='mailto:' + contactEmail)
+      a(href='mailto:' + cont
+ctEmail)
         | Write us!
