--- a/static/jade/components/navbar.jade
+++ b/static/jade/components/navbar.jade
@@ -16,6 +16,8 @@ div
           li
             a(href='#section-schedule') Schedule
           li
+            a(href='#section-tickets') Tickets
+          li
             a(href='#section-sponsors') Sponsors
           li
             a(href='#section-contact') Contact
