--- a/static/jade/pages/tickets.jade
+++ b/static/jade/pages/tickets.jade
@@ -1,16 +1,18 @@
 h2.text-center Tickets
 .row
   p Stay tuned for our offer
+
   //script(src="https://js.tito.io/v1", async)
   //tito-widget(event="pyvec/pycon-cz-2015", ssl-check-disabled)
   //tito-button(event="pyvec/pycon-cz-2015", ssl-check-disabled, releases="3elajg6qcxu"-)
+
   #mc_embed_signup
     form#mc-embedded-subscribe-form.validate.form-inline(action='//pyvec.us11.list-manage.com/subscribe/post?u=c729335695976351db803d33d&id=774227ba0f', method='post', name='mc-embedded-subscribe-form', target='_blank', novalidate='')
       .mc-field-group.form-group
         label.sr-only(for='mce-EMAIL') Email Address
         input#mce-EMAIL.required.email.form-control(type='email', value='', name='EMAIL', placeholder="john@gmail.com")
       .form-group
-        &nbsp;
+        | &nbsp;
         input#mc-embedded-subscribe.button.btn.btn-default(type='submit', value='Subscribe', name='subscribe')
       #mce-responses.clear
         #mce-error-response.response(style='display:none')
