--- a/static/jade/pages/tickets.jade
+++ b/static/jade/pages/tickets.jade
@@ -1,6 +1,6 @@
 h2.text-center Tickets
 .row
-  p Stay tuned for our offer
+  p Tickets will be on sale since 1st September. Stay tuned!
 
   //script(src="https://js.tito.io/v1", async)
   //tito-widget(event="pyvec/pycon-cz-2015", ssl-check-disabled)
