edited home and timeline text

--- a/static/jade/pages/home.jade
+++ b/static/jade/pages/home.jade
@@ -6,7 +6,7 @@
       .col-md-3.col-md-offset-3
         p.event-location Brno, Czech Republic
       .col-md-3
-        p.event-date 14-15th November 2015
+        p.event-date November 14-15, 2015
 .claim
   .container
     p.lead
