--- a/static/jade/pages/timeline.jade
+++ b/static/jade/pages/timeline.jade
@@ -14,25 +14,25 @@ div.row
 
         .timeline-body
           p.
-            The world famous Django Girls workshop is coming back to Brno! 
-            This one-day workshop aims to introduce women to the world of technology 
-            and open source. This workshop requires advance registration. For details, 
-            check out the [# a(href="https://djangogirls.org/brno/")Django Girls Brno] website.
+            The world famous Django Girls workshop is coming back to Brno!
+            This one-day workshop aims to introduce women to the world of technology
+            and open source. This workshop requires advance registration. For details,
+            check out the #[a(href="https://djangogirls.org/brno/", target="_blank") Django Girls Brno] website.
 
     li.timeline-inverted
-        .timeline-badge.info
-          i.glyphicon.glyphicon-credit-card
-        .timeline-panel
-          .timeline-heading
-            h4.timeline-title Pre-Registration Welcome Social
-            p
-              small.text-muted
-                i.glyphicon.glyphicon Friday, Nov 14 - Evening
-          .timeline-body
-            p.
-              If you are in Brno, stop by and pick up your conference badge, meet other 
-              attendees, and say hello. Exact time and location to be announced soon.
-              
+      .timeline-badge.info
+        i.glyphicon.glyphicon-credit-card
+      .timeline-panel
+        .timeline-heading
+          h4.timeline-title Pre-Registration Welcome Social
+          p
+            small.text-muted
+              i.glyphicon.glyphicon Friday, Nov 14 - Evening
+        .timeline-body
+          p.
+            If you are in Brno, stop by and pick up your conference badge, meet other
+            attendees, and say hello. Exact time and location to be announced soon.
+
     li.timeline-inverted
       .timeline-badge.info
         i.glyphicon.glyphicon-credit-card
@@ -44,11 +44,11 @@ div.row
               i.glyphicon.glyphicon Saturday, Nov 14 - Daytime
         .timeline-body
           p.
-            Keynotes and talks about Python and how it's used in different environments. 
-            From building beautiful Django-pony websites to analyzing terabytes of 
-            data in science institutes, we're going to select the most diverse talks 
+            Keynotes and talks about Python and how it's used in different environments.
+            From building beautiful Django-pony websites to analyzing terabytes of
+            data in science institutes, we're going to select the most diverse talks
             from all possible fields.
-            
+
     li.timeline-inverted
       .timeline-badge.info
         i.glyphicon.glyphicon-credit-card
@@ -73,8 +73,8 @@ div.row
               i.glyphicon.glyphicon Sunday, Nov 15
         .timeline-body
           p.
-            Project sprints and hackfests for all things Python. Sprints are a great 
-            way to work together with like-minded people towards shared goals. You can 
-            fix bugs, create new and interesting tools, write documentation, or even 
-            run a mini-workshop! We will publish a Wiki to coordinate sprints closer 
+            Project sprints and hackfests for all things Python. Sprints are a great
+            way to work together with like-minded people towards shared goals. You can
+            fix bugs, create new and interesting tools, write documentation, or even
+            run a mini-workshop! We will publish a Wiki to coordinate sprints closer
             to the conference day. Stay tuned!
