more edits to text

--- a/static/jade/components/footer.jade
+++ b/static/jade/components/footer.jade
@@ -2,10 +2,10 @@ footer
   .container
     footer
       a(href='https://github.com/tricoder42/cz.pycon.org-2015/blob/feature/code-of-conduct/code-of-conduct.md')
-        | Code of conduct
+        | Code of Conduct
 
       p.psf-trademark
         a(href='https://www.python.org/psf/trademarks/pycon/') PyCon™
         |  is a trademark for worldwide conference activities claimed by
-        a(href='https://www.python.org/psf-landing/')  Python software foundation
+        a(href='https://www.python.org/psf-landing/')  Python Software Foundation
         | .
