--- a/static/jade/pages/home.jade
+++ b/static/jade/pages/home.jade
@@ -11,4 +11,4 @@
   .container
     p.lead
       | The very first Python conference in Czech republic.
-      | Join us for one day of talks about Python and Python related topics.
+      | Join us for a fun weekend full of talk and sprints about Python and Python-related topics.
