--- a/static/jade/pages/tickets.jade
+++ b/static/jade/pages/tickets.jade
@@ -1,6 +1,6 @@
 h2.text-center Tickets
 .row
-  p Tickets will be on sale since 1st September. Stay tuned!
+  p Tickets will go on sale on September 1. Stay tuned!
 
   //script(src="https://js.tito.io/v1", async)
   //tito-widget(event="pyvec/pycon-cz-2015", ssl-check-disabled)
@@ -19,4 +19,3 @@ h2.text-center Tickets
         #mce-success-response.response(style='display:none')
       div(style='position: absolute; left: -5000px;')
         input(type='text', name='b_c729335695976351db803d33d_774227ba0f', tabindex='-1', value='')
-
