--- a/static/jade/pages/sponsors.jade
+++ b/static/jade/pages/sponsors.jade
@@ -5,12 +5,12 @@ h2 Our sponsors
     .sponsor-placeholder
       .sponsor
         a.s-link.cfs(href='mailto:' + contactEmail)
-          | Become our the most exclusive Gold sponsor!
+          | Become our the most exclusive Platinum sponsor!
   .silver
     .sponsor-placeholder
       .sponsor
         a.s-link.cfs(href='mailto:' + contactEmail)
-          | Show yourself as a Silver sponsor!
+          | Shine as a Gold sponsor!
     .sponsor-placeholder
       .sponsor
         a.s-link(href='')
@@ -18,7 +18,7 @@ h2 Our sponsors
     .sponsor-placeholder
       .sponsor
         a.s-link.cfs(href='mailto:' + contactEmail)
-          | Support us as a Bronze sponsor!
+          | Support us as a Silver sponsor!
     .sponsor-placeholder
       .sponsor
         a.s-link(href='')
