--- a/static/jade/pages/map.jade
+++ b/static/jade/pages/map.jade
@@ -1,9 +1,9 @@
 h2 The venue
 
 address
-  p.strong Masaryk University, Faculty of Informatics
-  p Botanická 68a
-  p 602 00 Brno
-  p Czech Republic
+  p.strong VUT FIT
+  p Building D
+  p Božetěchova 1/2
+  p 612 66 Brno
 
 #map
